--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "js-cookie": "^3.0.5",
     "path": "^0.12.7",
     "react": "^19.1.0",
+    "react-cookie": "^8.0.1",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.1.5"
