--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^19.1.3",
     "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^19.1.3",
