--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/open-sans": "^5.2.5",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "flowbite-datepicker": "^1.3.2",
@@ -26,6 +27,7 @@
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
+    "@fontsource/open-sans": "^5.2.5",
     "@eslint/js": "^9.25.0",
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^19.1.3",
