--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "flowbite-datepicker": "^1.3.2",
     "fs": "^0.0.1-security",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.511.0",
     "path": "^0.12.7",
     "react": "^19.1.0",
     "react-cookie": "^8.0.1",
@@ -27,8 +28,8 @@
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
-    "@fontsource/open-sans": "^5.2.5",
     "@eslint/js": "^9.25.0",
+    "@fontsource/open-sans": "^5.2.5",
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^19.1.3",
     "@types/react-datepicker": "^7.0.0",
