--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "axios": "^1.9.0",
     "flowbite-datepicker": "^1.3.2",
+    "fs": "^0.0.1-security",
+    "js-cookie": "^3.0.5",
+    "path": "^0.12.7",
     "react": "^19.1.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
