--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve dist -n -L -p $PORT"
   },
   "dependencies": {
     "@fontsource/open-sans": "^5.2.5",
@@ -25,6 +26,7 @@
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
+    "serve": "^14.2.4",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
